# sbr

./: .gitignore  README.md
BasicRayTracing/: CMakeLists.txt  Scene.h  main.cpp
BasicRayTracing/tutorial/step1/: geometry.h  main.cpp
BasicRayTracing/tutorial/step2/: Scene.cpp  Scene.h  main.cpp
BasicRayTracing/tutorial/step3/: Scene.cpp  Scene.h  main.cpp
BasicRayTracing/tutorial/step4/: Scene.cpp  Scene.h
BasicRayTracing/tutorial/step5/: Scene.cpp  Scene.h  main.cpp
BasicRayTracing/tutorial/step6/: Scene.cpp  Scene.h  main.cpp
Fractal/: .clang-format  CMakeLists.txt  Fractal.cpp
HalfedgeImpl/: CMakeLists.txt  IOManager.cpp  IOManager.h  MPoint3.h  MVector3.h  PolyMesh.cpp  PolyMesh.h  d1.txt  main.cpp
RayTracingInCornellBox/: CMakeLists.txt  Scene.cpp  Scene.h  main.cpp
SimpleThreadPool/: ThreadPool.h  test.cpp
